--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <header class="header">
-    <div class="contaner">
+    <div class="container">
       <div class="header__inner">
         <a href="#" class="logo">
           <img src="images/logo.svg" alt="TealuxE">
@@ -27,9 +27,51 @@
             <li class="menu__item"><a href="#" class="menu__link">Pu-erh</a></li>
           </ul>
         </nav>
+        <ul class="user-actions">
+          <li class="user-actions__item">
+            <a class="user-actions__link" href="#">
+              <img src="images/cart.svg" alt="">
+            </a>
+          </li>
+          <li class="user-actions__item">
+            <a class="user-actions__link" href="#">
+              <img src="images/user.svg" alt="">
+            </a>
+          </li>
+          <li class="user-actions__item">
+
+            <a class="user-actions__link user-actions__link-serch" href="#">
+              <img src="images/search.svg" alt="">
+            </a>
+
+            <!-- <search>
+              <form action="">
+                <input type="search">
+                <button type="submit"></button>
+              </form>
+            </search> -->
+
+          </li>
+        </ul>
       </div>
     </div>
   </header>
+  <main class="main">
+    <section class="top">
+      <div class="container">
+        <div class="top__inner">
+          <h1 class="top__title">A cup of tea is a moment of calm in the chaos of life</h1>
+          <p class="top__text">Wide selection of high-quality teas from all over the world, carefully curated by tea
+            experts.</p>
+        </div>
+      </div>
+    </section>
+    <blockquote class="blockquote">
+      <p class="blockquote__text">
+        "Tea is not just a drink, it's a way of life and a way to connect with our loved ones."
+      </p>
+    </blockquote>
+  </main>
 
   <script src="js/main.js"></script>
 </body>
