--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
 
+  <div class="menu--close"></div>
   <header class="header">
     <div class="container">
       <div class="header__inner">
