add new section assortment

--- a/index.html
+++ b/index.html
@@ -98,6 +98,33 @@
         "Tea is not just a drink, it's a way of life and a way to connect with our loved ones."
       </p>
     </blockquote>
+    <div class="assortment">
+      <div class="container">
+        <h2 class="title assortment__title">Explore our Collections</h2>
+        <ul class="assortment__list">
+          <li class="assortment__item">
+            <img src="images/black.png" alt="tea" class="assortment__img">
+            <p class="assortment__name">Blach</p>
+          </li>
+          <li class="assortment__item">
+            <img src="images/green.png" alt="tea" class="assortment__img">
+            <p class="assortment__name">Green</p>
+          </li>
+          <li class="assortment__item">
+            <img src="images/white.png" alt="tea" class="assortment__img">
+            <p class="assortment__name">White</p>
+          </li>
+          <li class="assortment__item">
+            <img src="images/oolong.png" alt="tea" class="assortment__img">
+            <p class="assortment__name">Oolong</p>
+          </li>
+          <li class="assortment__item">
+            <img src="images/pu-erh.png" alt="tea" class="assortment__img">
+            <p class="assortment__name">Pu-erh</p>
+          </li>
+        </ul>
+      </div>
+    </div>
   </main>
 
   <script src="js/main.js"></script>
