--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         "Tea is not just a drink, it's a way of life and a way to connect with our loved ones."
       </p>
     </blockquote>
-    <div class="assortment">
+    <section class="assortment">
       <div class="container">
         <h2 class="title assortment__title">Explore our Collections</h2>
         <ul class="assortment__list">
@@ -124,7 +124,43 @@
           </li>
         </ul>
       </div>
-    </div>
+    </section>
+    <section class="reviews">
+      <div class="container">
+        <h2 class="title">What our Clients say</h2>
+        <ul class="reviews__list">
+          <li class="reviews__item">
+            <blockquote>
+              <p class="reviews__text">"As a tea enthusiast, I have tried teas from all over the world, but this tea
+                store truly stands out. Their teas are of the highest quality and the variety is impressive. This is
+                definitely a tea store that every tea lover should visit."</p>
+              <cite class="reviews__name">Alice</cite>
+            </blockquote>
+          </li>
+          <li class="reviews__item">
+            <blockquote>
+              <p class="reviews__text">"This tea store is my go-to for all my tea needs. Their selection is unbeatable
+                and the quality of their teas is exceptional."</p>
+              <cite class="reviews__name">Mad-Hatter</cite>
+            </blockquote>
+          </li>
+          <li class="reviews__item">
+            <blockquote>
+              <p class="reviews__text">"If you're a tea lover, you must visit this tea store. The selection is vast and
+                the quality is outstanding. I guarantee you won't be disappointed."</p>
+              <cite class="reviews__name">Dormouse</cite>
+            </blockquote>
+          </li>
+          <li class="reviews__item reviews__item--hide">
+            <blockquote>
+              <p class="reviews__text">"I am not a big tea drinker, but this tea store has converted me. I highly
+                recommend this tea store to anyone looking for a high-quality tea experience."</p>
+              <cite class="reviews__name">March Hare</cite>
+            </blockquote>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <script src="js/main.js"></script>
