--- a/index.html
+++ b/index.html
@@ -161,6 +161,46 @@
         </ul>
       </div>
     </section>
+    <section class="main-block">
+      <div class="container">
+        <h2 class="title main__title"></h2>
+        <ul class="main-block__list">
+          <li class="main-block__item">
+            <img src="images/blog-1.jpeg" alt="tea" class="main-block__item-img">
+            <div class="main-block__content">
+              <h3 class="main-block__item-title">Tea Time Travels: Funny Moments from Around the World</h3>
+              <a href="#" class="main-block__item-author">by Robinson Crusoe</a>
+              <a href="#" class="main-block__item-link">Read</a>
+            </div>
+          </li>
+          <li class="main-block__item">
+            <img src="images/blog-3.jpeg" alt="tea" class="main-block__item-img">
+            <div class="main-block__content">
+              <h3 class="main-block__item-title">The Role of Tea in Mental Health</h3>
+              <a href="#" class="main-block__item-author">by Joker</a>
+              <a href="#" class="main-block__item-link">Read</a>
+            </div>
+          </li>
+          <li class="main-block__item">
+            <img src="images/blog-2.jpeg" alt="tea" class="main-block__item-img">
+            <div class="main-block__content">
+              <h3 class="main-block__item-title">Tea-rific Tales: Hilarious Stories from Tea Lovers</h3>
+              <a href="#" class="main-block__item-author">by Casper the Friendly Ghost</a>
+              <a href="#" class="main-block__item-link">Read</a>
+            </div>
+          </li>          
+          <li class="main-block__item">
+            <img src="images/blog-4.jpeg" alt="tea" class="main-block__item-img">
+            <div class="main-block__content">
+              <h3 class="main-block__item-title">Tea and Caffeine: Effects on the Brain and Behavior</h3>
+              <a href="#" class="main-block__item-author">by Author Authorius</a>
+              <a href="#" class="main-block__item-link">Read</a>
+            </div>
+          </li>
+        </ul>
+        <a href="#" class="main-blog__link">View all</a>
+      </div>
+    </section>
   </main>
 
   <script src="js/main.js"></script>
