--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </section>
     <section class="main-block">
       <div class="container">
-        <h2 class="title main__title"></h2>
+        <h2 class="title main__title">Our Tea Blog</h2>
         <ul class="main-block__list">
           <li class="main-block__item">
             <img src="images/blog-1.jpeg" alt="tea" class="main-block__item-img">
@@ -188,7 +188,7 @@
               <a href="#" class="main-block__item-author">by Casper the Friendly Ghost</a>
               <a href="#" class="main-block__item-link">Read</a>
             </div>
-          </li>          
+          </li>
           <li class="main-block__item">
             <img src="images/blog-4.jpeg" alt="tea" class="main-block__item-img">
             <div class="main-block__content">
@@ -199,6 +199,56 @@
           </li>
         </ul>
         <a href="#" class="main-blog__link">View all</a>
+      </div>
+    </section>
+    <section class="main-list">
+      <div class="container">
+        <h2 class="title main-list">Want to know more?</h2>
+        <div class="main-list__inner">
+          <p class="main-list__text">
+            Join our mailing list and stay up-to-date with the latest news, promotions, and exclusive offers from our
+            tea store. Be the first to know about new tea arrivals, seasonal blends, and special discounts. Don't miss
+            out on the tea-rrific perks - sign up today!
+          </p>
+          <form action="#" class="main-list__form">
+            <input class="main-list__email" type="email" placeholder="name@email.com" name="" id="">
+            <button class="main-list__btn" type="submit">Join</button>
+            <label>
+              <input class="checkbox" type="checkbox" name="" id="">
+              <span class="checkbox-style"></span>
+              <p class="checkbox__text">We take your privacy seriously and are committed to protecting your personal
+                information. By subscribing to our mailing list, you are consenting to receive periodic emails from us
+                about our products, promotions, and other tea-related information.</p>
+            </label>
+          </form>
+        </div>
+      </div>
+    </section>
+    <section class="prioritiss">
+      <div class="container">
+        <h2 class="title">We Prioritise</h2>
+        <ul class="prioritiss__list">
+          <li class="prioritiss__item">
+            <h4 class="prioritiss__title">Single garden teas</h4>
+            <p class="prioritiss__text">Complete transparency</p>
+            <img src="images/prioritiss-1.svg" alt="">
+          </li>
+          <li class="prioritiss__item">
+            <h4 class="prioritiss__title">Only Loose leaf tea</h4>
+            <p class="prioritiss__text">Best Drinking Experience</p>
+            <img src="images/prioritiss-2.svg" alt="">
+          </li>
+          <li class="prioritiss__item">
+            <h4 class="prioritiss__title">Customer support</h4>
+            <p class="prioritiss__text">No bots, no automated replies</p>
+            <img src="images/prioritiss-3.svg" alt="">
+          </li>
+          <li class="prioritiss__item">
+            <h4 class="prioritiss__title">Fast shipping</h4>
+            <p class="prioritiss__text">Save, Convenient, Reliable</p>
+            <img src="images/prioritiss-4.svg" alt="">
+          </li>
+        </ul>
       </div>
     </section>
   </main>
