add new styles for form

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </section>
     <section class="main-list">
       <div class="container">
-        <h2 class="title main-list">Want to know more?</h2>
+        <h2 class="title main-list__title">Want to know more?</h2>
         <div class="main-list__inner">
           <p class="main-list__text">
             Join our mailing list and stay up-to-date with the latest news, promotions, and exclusive offers from our
@@ -213,7 +213,7 @@
           <form action="#" class="main-list__form">
             <input class="main-list__email" type="email" placeholder="name@email.com" name="" id="">
             <button class="main-list__btn" type="submit">Join</button>
-            <label>
+            <label class="main-block__label">
               <input class="checkbox" type="checkbox" name="" id="">
               <span class="checkbox-style"></span>
               <p class="checkbox__text">We take your privacy seriously and are committed to protecting your personal
