--- a/index.html
+++ b/index.html
@@ -252,6 +252,39 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <ul class="footer__products">
+          <li class="footer__producrs-title">Products</li>
+          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">Black tea</a></li>
+          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">Green tea</a></li>
+          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">White tea</a></li>
+          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">Oolong tea</a></li>
+          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">Pu-erh tea</a></li>
+        </ul>
+        <ul class="footer__company">
+          <li class="footer__company-title">Company</li>
+          <li class="footer__company-item"><a href="#" class="footer__company-link">About Us</a></li>
+          <li class="footer__company-item"><a href="#" class="footer__company-link">Contact Us</a></li>
+          <li class="footer__company-item"><a href="#" class="footer__company-link">Our Blog</a></li>
+          <li class="footer__company-item"><a href="#" class="footer__company-link">FAQ</a></li>
+          <li class="footer__company-item"><a href="#" class="footer__company-link">Shipping & Delivery</a></li>
+          <li class="footer__company-item"><a href="#" class="footer__company-link">Refund policy</a></li>
+          <li class="footer__company-item"><a href="#" class="footer__company-link">Terms of Service</a></li>
+        </ul>
+      </div>        
+      <div class="footer__bottom">
+        <p class="footer__copy">© Tealuxe, 2023</p>
+        <ul class="partnaers-logo">
+          <li class="partnaers-logo__item"><img src="images/partnes-1.svg" alt="partners" href="#"></li>
+          <li class="partnaers-logo__item"><img src="images/partnes-2.svg" alt="partners" href="#"></li>
+          <li class="partnaers-logo__item"><img src="images/partnes-3.svg" alt="partners" href="#"></li>
+          <li class="partnaers-logo__item"><img src="images/partnes-4.svg" alt="partners" href="#"></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/main.js"></script>
 </body>
