--- a/index.html
+++ b/index.html
@@ -256,12 +256,12 @@
     <div class="container">
       <div class="footer__inner">
         <ul class="footer__products">
-          <li class="footer__producrs-title">Products</li>
-          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">Black tea</a></li>
-          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">Green tea</a></li>
-          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">White tea</a></li>
-          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">Oolong tea</a></li>
-          <li class="footer__producrs-iem"><a href="#" class="footer__producrs-link">Pu-erh tea</a></li>
+          <li class="footer__products-title">Products</li>
+          <li class="footer__products-item"><a href="#" class="footer__products-link">Black tea</a></li>
+          <li class="footer__products-item"><a href="#" class="footer__products-link">Green tea</a></li>
+          <li class="footer__products-item"><a href="#" class="footer__products-link">White tea</a></li>
+          <li class="footer__products-item"><a href="#" class="footer__products-link">Oolong tea</a></li>
+          <li class="footer__products-item"><a href="#" class="footer__products-link">Pu-erh tea</a></li>
         </ul>
         <ul class="footer__company">
           <li class="footer__company-title">Company</li>
@@ -273,7 +273,38 @@
           <li class="footer__company-item"><a href="#" class="footer__company-link">Refund policy</a></li>
           <li class="footer__company-item"><a href="#" class="footer__company-link">Terms of Service</a></li>
         </ul>
-      </div>        
+        <blockquote class="footer__blockquote">
+          <p class="footer__blockquote-text">“Tea is a journey. It can take you to new places and open your mind to new
+            experiences. Let every sip
+            transport you to a world of wonder and possibility”</p>
+          <cite class="footer__blockquote-author">Dragomir Teodorescu, <span>Tealuxe owner</span></cite>
+        </blockquote>
+        <div class="footer__contacts">
+          <h5 class="footer__contacts-title">Stay In Touch</h5>
+          <p class="footer__contacts-text">Please feel free to contact us via the email of phone. We would be happy to hear
+            from you!</p>
+          <ul class="footer__nav">
+            <li class="footer__nav-logo"><a href="#" class="footer__logo"><img src="images/logo.svg" alt="logo"></a>
+            </li>
+            <li class="footer__nav-contacts">
+              <a class="footer__phone" href="tell:+370680123456">+370 680 123456</a>
+              <a class="footer__mail" href="mailto:info@tealuxe.com">info@tealuxe.com</a>
+            </li>
+            <li class="footer__social">
+              <ul class="footer__social-list">
+                <li class="footer__social-item"><a href="#" class="footer__social-link"><img src="images/facebook.svg"
+                      alt="facebook"></a></li>
+                <li class="footer__social-item"><a href="#" class="footer__social-link"><img src="images/youtube.svg"
+                      alt="youtube"></a></li>
+                <li class="footer__social-item"><a href="#" class="footer__social-link"><img src="images/instagram.svg"
+                      alt="instagram"></a></li>
+                <li class="footer__social-item"><a href="#" class="footer__social-link"><img src="images/twitter.svg"
+                      alt="twitter"></a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
       <div class="footer__bottom">
         <p class="footer__copy">© Tealuxe, 2023</p>
         <ul class="partnaers-logo">
